@@ -1,9 +1,16 @@
 #!/bin/bash
-cd "$(dirname "$0")"
+set -e
 
-java -Djava.library.path=bin/natives \
+cd "$(dirname "$0")"
+ROOT_DIR="$(pwd)"
+
+mkdir -p ".minecraft/mods"
+
+java -Duser.home="$ROOT_DIR" \
+     -Djava.library.path=".minecraft/bin/natives" \
      -Dorg.lwjgl.opengl.Display.noXRandR=true \
+     --enable-native-access=ALL-UNNAMED \
      --add-opens=java.base/java.nio=ALL-UNNAMED \
      --add-opens=java.desktop/sun.awt=ALL-UNNAMED \
-     -cp "bin/OriginLoader-1.0.0.jar" \
+     -cp ".minecraft/versions/rd-132211.jar" \
      com.mojang.rubydung.RubyDung
